hphp/hack/test/typecheck/subtype_bug_2.php.exp
File "subtype_bug_2.php", line 6, characters 42-43:
Invalid argument (Typing[4110])
File "subtype_bug_2.php", line 5, characters 14-27:
Expected ImmMap<int, B>
File "subtype_bug_2.php", line 6, characters 15-30:
But got ConstMap<int, C>
